MEDIUM / Init infrastructure 2.1.1 (java 11)