@@ -11,10 +11,8 @@ dependencies {
   api group: 'com.google.inject', name: 'guice', version: '4.2.3'
   api group: 'findbugs', name: 'annotations', version: '1.0.0'
   implementation group: 'xerces', name: 'xercesImpl', version: '2.11.0'
-}
 
-if (JavaVersion.current().isJava9Compatible()) {
-	tasks.withType(JavaCompile) {
-		options.compilerArgs.addAll(['--add-modules', 'java.xml.bind'])
-    }
+  // java.xml.bind has been removed from jdk since java 11
+  implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3"
+  
 }
